--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-body {
+h1 {
     text-align: center;
 }
-div {
-    display: inline-block;
+h2 {
+    text-align: center;
 }
-#table {
-    display: block;
-    margin-top: 20px;
+p {
+    text-align: center;
 }
-th, td {
-    border: 1px solid black;
-    padding: 5px;
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+body {
+    background-color: lightgray;
+    border: 2px solid black;
+    margin: 10px 150px 0px 150px;
 }
